force-app/main/default/objects/Financial_Assistance__c/Financial_Assistance__c.object-meta.xml
<CustomObject>
    <label>Financial Assistance</label>
    <pluralLabel>Financial Assistances</pluralLabel>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Financial Assistance Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>