force-app/main/default/objects/Financial_Assistance__c/fields/Annual_Cap__c.field-meta.xml
<CustomField>
    <fullName>Annual_Cap__c</fullName><label>Annual Cap</label><type>Currency</type><precision>12</precision><scale>2</scale>
</CustomField>