force-app/main/default/objects/Financial_Assistance__c/fields/Assistance_Type__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Type__c</fullName><label>Assistance Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Copay Card</fullName><default>false</default><label>Copay Card</label></value>
        <value><fullName>PAP Free Drug</fullName><default>false</default><label>PAP Free Drug</label></value>
        <value><fullName>Foundation Referral</fullName><default>false</default><label>Foundation Referral</label></value>
        <value><fullName>Bridge Program</fullName><default>false</default><label>Bridge Program</label></value>
    </valueSetDefinition></valueSet>
</CustomField>