force-app/main/default/objects/Financial_Assistance__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName><label>Card Number</label><type>Text</type>
    <length>50</length><required>false</required>
<externalId>false</externalId>
</CustomField>