force-app/main/default/objects/Financial_Assistance__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>FA_Enrollee</relationshipName>
    <relationshipLabel>Financial Assistances</relationshipLabel>
</CustomField>