force-app/main/default/objects/Financial_Assistance__c/fields/FA_Status__c.field-meta.xml
<CustomField>
    <fullName>FA_Status__c</fullName><label>FA Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
        <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        <value><fullName>Denied</fullName><default>false</default><label>Denied</label></value>
        <value><fullName>Appeal Pending</fullName><default>false</default><label>Appeal Pending</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition></valueSet>
</CustomField>