force-app/main/default/objects/Financial_Assistance__c/fields/Income_FPL_Percent__c.field-meta.xml
<CustomField>
    <fullName>Income_FPL_Percent__c</fullName><label>Income FPL %</label><type>Number</type><precision>5</precision><scale>1</scale>
</CustomField>