force-app/main/default/objects/Financial_Assistance__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName><label>Remaining Balance</label><type>Currency</type><precision>12</precision><scale>2</scale>
</CustomField>