force-app/main/default/objects/Financial_Assistance__c/fields/Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed__c</fullName><label>Total Disbursed</label><type>Currency</type>
    <precision>12</precision><scale>2</scale><required>false</required>
</CustomField>